--- a/starter-code/styles/modules.css
+++ b/starter-code/styles/modules.css
@@ -50,6 +50,32 @@
   text-decoration: none;
 }
 
+.site-wrap{
+  background-color: tan;
+  padding: 4em;
+  background-size: 200%;
+}
+
+.nav-trigger{
+  position: absolute;
+  clip: rect(0,0,0,0);
+}
+
+label[for="nav-trigger"] {
+  position: fixed;
+  top: 15px;
+  left: 15px;
+  z-index: 2;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  background-image:
+
+  /*url(“data:image/svg+xml;utf8,<svg xmlns=’http://www.w3.org/2000/svg' xmlns:xlink=‘http://www.w3.org/1999/xlink’ version=‘1.1’ x=‘0px’ y=‘0px’ width=‘30px’ height=‘30px’ viewBox=‘0 0 30 30’ enable-background=‘new 0 0 30 30’ xml:space=‘preserve’><rect width=‘30’ height=‘6’/><rect y=‘24’ width=‘30’ height=‘6’/><rect y=‘12’ width=‘30’ height=‘6’/></svg>“);*/
+}
+@media only screen and(min-width: 700px){
+  
+}
 /* TODO: Now add styles for how things should look on a larger screen:
          - Hide the hamburger.
          - Main should be all on one row, with padding spaced better for a larger screen.
